--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   // Required
   "manifest_version": 3,
-  "name": "Macos buttons",
+  "name": "Youtube Video Downloader",
   "version": "1.0.0",
 
   // Recommended
-  "description": "Customize the navigation buttons to give them a macOS button look.",
+  "description": "Download any youtube video in one click.",
   "icons":{
     "16": "img/logo16.png",
     "48": "img/logo48.png",
